--- a/src/assets/scss/layout/_layouts.scss
+++ b/src/assets/scss/layout/_layouts.scss
@@ -13,6 +13,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: $body-size; //body size 10px
 }
 
 *,
@@ -29,7 +30,8 @@ body,
 
 body {
   margin: 0;
-  background-color: #f6f7fb;
+  font-size: $body-font-size;
+  // background-color: #f6f7fb;
   color: #111;
 }
 
@@ -56,4 +58,52 @@ img {
 
 .content {
   flex: 1;
+}
+.index-page {
+  background: linear-gradient(180deg, rgba(250, 250, 250, 0) 50%, #eee 100%);
+}
+.wrapper {
+  .header {
+    position: relative;
+    @include flex-center;
+    height: 5rem;
+    h1 {
+      @include fontsSet1(1.8rem, 700, $col-gray1);
+    }
+    .MuiButtonBase-root {
+      position: absolute;
+      min-width: auto;
+      color: $col-gray1;
+
+      &.back {
+        left: 1rem;
+        svg {
+          font-size: 2rem;
+        }
+      }
+      &.close {
+        right: 0.5rem;
+        svg {
+          font-size: 2.4rem;
+        }
+      }
+      &.alarm {
+        right: 0.5rem;
+        color: $col-gray4;
+        svg {
+          font-size: 2.4rem;
+        }
+      }
+      &.menu {
+        left: 1rem;
+        svg {
+          font-size: 2.4rem;
+        }
+      }
+    }
+  }
+
+  .container {
+    padding: 2rem 2rem 3rem;
+  }
 }
