--- a/src/assets/scss/page/_components.scss
+++ b/src/assets/scss/page/_components.scss
@@ -2,5 +2,5 @@
 @use '@/assets/scss/mixin/_all.scss' as *;
 
 // ################################################################################
-// #########################    component Area
+// #########################    components Area
 // ################################################################################
