--- a/src/assets/scss/page/_contents.scss
+++ b/src/assets/scss/page/_contents.scss
@@ -2,7 +2,7 @@
 @use '@/assets/scss/mixin/_all.scss' as *;
 
 // ################################################################################
-// #########################    component Area
+// #########################    contents Area
 // ################################################################################
 
 .alarm-box {
