--- a/src/assets/scss/mixin/_variables.scss
+++ b/src/assets/scss/mixin/_variables.scss
@@ -5,8 +5,8 @@ $body-size: 10px !default;
 $body-font-size: 1.4rem !default;
 
 //font-family
-$font-main: 'Pretendard' !important;
-$font-price: 'Pretendard' !important;
+// $font-main: 'Pretendard' !important;
+// $font-price: 'Pretendard' !important;
 
 //Font-color
 $primary: #0ac262;
